language/move-prover/tests/sources/aborts-if.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/aborts-if.move:31:9 ───
    │
 31 │         aborts_if _x <= _y;
    │         ^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/aborts-if.move:28:5: abort2_incorrect (entry)
    =     at tests/sources/aborts-if.move:28:5: abort2_incorrect (exit)
    =         _x = <redacted>,
    =         _y = <redacted>

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/aborts-if.move:47:9 ───
    │
 47 │         aborts_if x <= y;
    │         ^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/aborts-if.move:43:5: abort4_incorrect (entry)
    =     at tests/sources/aborts-if.move:44:9: abort4_incorrect
    =         x = <redacted>,
    =         y = <redacted>
    =     at tests/sources/aborts-if.move:43:5: abort4_incorrect (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/aborts-if.move:55:9 ───
    │
 55 │         aborts_if x < y;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/aborts-if.move:51:5: abort5_incorrect (entry)
    =     at tests/sources/aborts-if.move:52:9: abort5_incorrect
    =         x = <redacted>,
    =         y = <redacted>
    =     at tests/sources/aborts-if.move:51:5: abort5_incorrect (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/aborts-if.move:63:9 ───
    │
 63 │         aborts_if x <= y;
    │         ^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/aborts-if.move:59:5: abort6_incorrect (entry)
    =     at tests/sources/aborts-if.move:60:9: abort6_incorrect
    =         x = <redacted>,
    =         y = <redacted>
    =     at tests/sources/aborts-if.move:59:5: abort6_incorrect (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/aborts-if.move:85:9 ───
    │
 85 │         aborts_if x < y;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/aborts-if.move:81:5: multi_abort2_incorrect (entry)
    =     at tests/sources/aborts-if.move:82:9: multi_abort2_incorrect
    =         x = <redacted>,
    =         y = <redacted>
    =     at tests/sources/aborts-if.move:81:5: multi_abort2_incorrect (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/aborts-if.move:94:9 ───
    │
 94 │         aborts_if _x < _y;
    │         ^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/aborts-if.move:90:5: multi_abort3_incorrect (entry)
    =     at tests/sources/aborts-if.move:91:9: multi_abort3_incorrect
    =         _x = <redacted>,
    =         _y = <redacted>
    =     at tests/sources/aborts-if.move:90:5: multi_abort3_incorrect (exit)
